Add basic content to index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,67 @@
     <title>Odin Landing Page</title>
   </head>
   <body>
-    <nav></nav>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <nav>
+      <span class="headerlogo">Header Logo</span>
+      <ul class="linklist">
+        <li><a href="#">link one</a></li>
+        <li><a href="#">link two</a></li>
+        <li><a href="#">link three</a></li>
+      </ul>
+    </nav>
+    <header>
+      <div class="left-header">
+        <h1>This website is awesome</h1>
+        <span
+          >This website has some subtext that goes here under the main title.
+          It's smaller in font and the color is lower in contrast</span
+        >
+        <button>Sign Up</button>
+      </div>
+      <div class="right-header-img">this is a placeholder for an image</div>
+    </header>
+    <main>
+      <section>
+        <h2>Some random information.</h2>
+        <div class="randomcontainer">
+          <div class="info">
+            <div class="info-img"></div>
+            <span>This is some subtext under an illustration or image</span>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <span>This is some subtext under an illustration or image</span>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <span>This is some subtext under an illustration or image</span>
+          </div>
+          <div class="info">
+            <div class="info-img"></div>
+            <span>This is some subtext under an illustration or image</span>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>
+          This is an inspiring quote, or a testimonial from a costumer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All i know is that it looks nice.
+        </h2>
+        <p>-Thor, God of Thunder</p>
+      </section>
+      <section>
+        <div class="calltoaction">
+          <p>Call to action! It's time!</p>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button>Sign up</button>
+      </section>
+    </main>
+    <footer>
+      <span>Copyright © The Odin Project 2021</span>
+    </footer>
   </body>
 </html>
