Change sentence in nav links

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav>
       <span class="headerlogo">Header Logo</span>
       <ul class="linklist">
-        <li><a href="#">link one</a></li>
-        <li><a href="#">link two</a></li>
-        <li><a href="#">link three</a></li>
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
       </ul>
     </nav>
     <header>
