Add classes to header section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </nav>
     <header>
       <div class="left-header">
-        <h1>This website is awesome</h1>
-        <span
+        <h1 class="hero-primary-text">This website is awesome</h1>
+        <span class="hero-secondary-text"
           >This website has some subtext that goes here under the main title.
           It's smaller in font and the color is lower in contrast</span
         >
