--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >This website has some subtext that goes here under the main title.
           It's smaller in font and the color is lower in contrast</span
         >
-        <button>Sign Up</button>
+        <button class="btn-header">Sign Up</button>
       </div>
       <div class="right-header-img">this is a placeholder for an image</div>
     </header>
