--- a/index.html
+++ b/index.html
@@ -39,19 +39,27 @@
         <div class="randomcontainer">
           <div class="info">
             <div class="info-img"></div>
-            <span>This is some subtext under an illustration or image</span>
+            <span class="info-text"
+              >This is some subtext under an illustration or image</span
+            >
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span>This is some subtext under an illustration or image</span>
+            <span class="info-text"
+              >This is some subtext under an illustration or image</span
+            >
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span>This is some subtext under an illustration or image</span>
+            <span class="info-text"
+              >This is some subtext under an illustration or image</span
+            >
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span>This is some subtext under an illustration or image</span>
+            <span class="info-text"
+              >This is some subtext under an illustration or image</span
+            >
           </div>
         </div>
       </section>
