Add to index.html

--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
         <div class="randomcontainer">
           <div class="info">
             <div class="info-img"></div>
-            <span class="info-text"
-              >This is some subtext under an illustration or image</span
-            >
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span class="info-text"
-              >This is some subtext under an illustration or image</span
-            >
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span class="info-text"
-              >This is some subtext under an illustration or image</span
-            >
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
           </div>
           <div class="info">
             <div class="info-img"></div>
-            <span class="info-text"
-              >This is some subtext under an illustration or image</span
-            >
+            <p class="info-text">
+              This is some subtext under an illustration or image
+            </p>
           </div>
         </div>
       </section>
