--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="quote">
         <h2>
           This is an inspiring quote, or a testimonial from a costumer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
