--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         </div>
       </section>
       <section class="quote">
-        <h2>
+        <p class="quote-text">
           This is an inspiring quote, or a testimonial from a costumer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
           knows? All i know is that it looks nice.
-        </h2>
+        </p>
         <p>-Thor, God of Thunder</p>
       </section>
       <section>
