Add class to signature in quote section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           it's just filling up space, or maybe people will actually read it. Who
           knows? All i know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="signature">-Thor, God of Thunder</p>
       </section>
       <section>
         <div class="calltoaction">
