Add class to call to action section

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         </p>
         <p class="signature">-Thor, God of Thunder</p>
       </section>
-      <section>
+      <section class="action-container">
         <div class="calltoaction">
-          <p>Call to action! It's time!</p>
-          <p>
+          <p class="action-paragraph">Call to action! It's time!</p>
+          <p class="action-sentence">
             Sign up for our product by clicking that button right over there!
           </p>
         </div>
-        <button>Sign up</button>
+        <button class="action-btn">Sign up</button>
       </section>
     </main>
     <footer>
